PROTON-2422: fix epoll timer ordering bug